navbar-collapse operations correction

--- a/client/src/assets/scss/components/_navBar.scss
+++ b/client/src/assets/scss/components/_navBar.scss
@@ -12,3 +12,7 @@
 .dropdown-item-modify:hover {
     background-color: $secondary !important;
 }
+
+.menu-icon {
+    font-size: 31px;
+}
